--- a/package.json
+++ b/package.json
@@ -4,43 +4,77 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
+    "startDebug": "ng serve -host 0.0.0.0 --live-reload false --disable-host-check --extract-css ",
+    "start": "ng serve -host 0.0.0.0 --live-reload false --disable-host-check --target=production --sourcemaps --aot ",
+    "build": "ng build --target=production --aot",
+    "test": "ng test --single-run --sourcemaps=false",
+    "testWithCoverage": "ng test --single-run --code-coverage",
+    "lint": "ng lint --type-check --fix",
+    "csslint": "stylelint src/**/*.css --fix",
     "e2e": "ng e2e"
   },
   "private": true,
+  "pre-commit": [
+    "csslint",
+    "lint",
+    "test",
+    "build"
+  ],
   "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "@angular/animations": "^4.3.6",
+    "@angular/common": "^4.3.6",
+    "@angular/compiler": "^4.3.6",
+    "@angular/core": "^4.3.6",
+    "@angular/forms": "^4.3.6",
+    "@angular/http": "^4.3.6",
+    "@angular/platform-browser": "^4.3.6",
+    "@angular/platform-browser-dynamic": "^4.3.6",
+    "@angular/router": "^4.3.6",
+    "clone": "^2.1.1",
+    "core-js": "^2.5.0",
+    "rxjs": "^5.4.3",
+    "ts-helpers": "^1.1.2",
+    "zone.js": "0.8.17"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
+    "@angular/cli": "1.4.2",
+    "@angular/compiler-cli": "^4.3.6",
+    "@angular/flex-layout": "2.0.0-beta.9",
+    "@angular/language-service": "^4.3.6",
+    "@ngrx/effects": "^4.0.5",
+    "@ngrx/store": "^4.0.3",
+    "@types/jasmine": "2.5.54",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^8.0.26",
+    "classlist.js": "^1.1.20150312",
+    "codelyzer": "~3.0.1",
+    "deep-assign": "^2.0.0",
+    "deep-equal": "^1.0.1",
+    "font-awesome": "^4.7.0",
+    "intl": "1.2.5",
+    "jasmine-core": "2.8.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "jsdom": "^11.2.0",
+    "karma": "~1.7.1",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "protractor": "~5.1.0",
-    "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "karma-jsdom-launcher": "^6.1.2",
+    "karma-spec-reporter": "0.0.31",
+    "matchmedia-polyfill": "^0.3.0",
+    "postcss-reporter": "^5.0.0",
+    "postcss": "^6.0.10",
+    "pre-commit": "^1.2.2",
+    "protractor": "~5.1.2",
+    "stylelint": "^8.0.0",
+    "stylelint-config-standard": "^17.0.0",
+    "ts-node": "~3.3.0",
+    "tslint": "^5.7.0",
+    "tslint-immutable": "^4.1.0",
+    "typescript": "~2.4.2",
+    "web-animations-js": "^2.3.1",
+    "window.requestanimationframe": "^1.0.1"
   }
 }
